# ECE574

./: 1_ROUNDER.v  CMakeLists.txt  DPCL_LAT.txt  NETLISTS_LAT.txt  README.md  README.txt  SignExtension.v  Thumbs.db  codeDetect.v
Assignment1/: ADD.v  Assignment1.gise  Assignment1.xise  COMP.v  Circuit1.bld  Circuit1.cmd_log  Circuit1.ngc  Circuit1.ngd  Circuit1.ngr  Circuit1.pad  Circuit1.par  Circuit1.pcf  Circuit1.prj  Circuit1.syr  Circuit1.twr  Circuit1.twx  Circuit1.unroutes  Circuit1.v  Circuit1.xst  Circuit1_envsettings.html  Circuit1_guide.ncd  Circuit1_map.map  Circuit1_map.mrp  Circuit1_map.ncd  Circuit1_map.ngm  Circuit1_map.xrpt  Circuit1_ngdbuild.xrpt  Circuit1_pad.csv  Circuit1_pad.txt  Circuit1_par.xrpt  Circuit1_summary.html  Circuit1_usage.xml  Circuit1_xst.xrpt  Circuit2.v  Circuit3.v  Circuit4.v  Circuit5.v  Circuit6.cmd_log  Circuit6.ngc  Circuit6.ngr  (+47 more)
Assignment1/_ngo/: netlist.lst
Assignment1/_xmsgs/: pn_parser.xmsgs  xst.xmsgs
Assignment1/iseconfig/: Assignment1.projectmgr  Circuit1.xreport  REG.xreport
Assignment1/planAhead_run_1/: Assignment1.ppr  planAhead.jou
Assignment1/project_1/: import_ise_summary.txt  project_1.xpr
Assignment1/project_2/: import_ise_summary.txt  project_2.xpr
Assignment1/xlnx_auto_0_xdb/: cst.xbcd
Assignment1/xst/work/: hdllib.ref  work.sdbl  work.sdbx
Assignment2/: Blank  CMakeLists.txt  Edge.cpp  Edge.h  FileIO.cpp  FileIO.h  Graph.cpp  Graph.h  Main.cpp  Node.cpp  Node.h  README.txt  Translator.cpp  Translator.h  Translator2.cpp  Translator2.h  main.cpp  vardef.cpp  vardef.h
(+284 files in other folders)
